# civ6sndextractor_qt

./: .gitignore  .gitmodules  Bit_stream.h  CMakeLists.txt  civ6sndextractor_qt.pro  civ6sndextractor_qt_en_US.ts  codebook.h  crc.cpp  crc.h  errors.h  main.cpp  revorb.cpp  soundextract.aps  soundextract.cpp  soundextract.h  soundextract.ui  wwriff.cpp  wwriff.h
civ6sndextractor_qt/: civ6sndextractor_qt.pro
lib/msvc/32/: ogg.lib  vorbis.lib
